# wakethemup

./: .gitignore  .goreleaser.yml  CHANGELOG.md  CLAUDE.md  README.md  go.mod  go.sum  selfdoc.json
.github/workflows/: ci.yml  publish.yml
.rlsbl/: config.json  hashes.json
.rlsbl/bases/.github/workflows/: ci.yml
.rlsbl/changes/: .validated  0.1.0.md  0.1.1.md  0.2.0.jsonl  0.2.0.md  0.2.1.md  unreleased.jsonl
.rlsbl/hooks/: post-release.sh  pre-release.sh
.rlsbl/releases/: unreleased.toml  v0.1.1.toml
.selfdoc/hashes/: hashes.json
.strictcli/: checks.toml
cmd/wake/: integration_test.go  main.go
docs/: _CLAUDE.md  _README.md  cli-check.md  cli-index.md  cli-install.md  cli-list.md  cli-remove.md  cli-status.md  cmd-wake.md  gen-index.md  index.md  internal-config.md  internal-systemd.md  internal-unit.md
internal/config/: config.go  config_test.go
internal/systemd/: checks_test.go  exec.go  linger.go  linger_test.go  mock_test.go  systemd.go  systemd_test.go  types.go
internal/unit/: escape.go  service.tmpl  timer.tmpl  unit.go  unit_test.go
npm/: install.js  install.test.js  package.json
pypi/: pyproject.toml
pypi/wakethemup/: __init__.py  __main__.py
scripts/: test_e2e.sh
