[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wakethemup"
version = "0.2.1"
description = "Manage systemd user timers from TOML configs"
license = "MIT"
requires-python = ">=3.9"
keywords = ["systemd", "timer", "toml", "scheduler", "cron", "cli", "rlsbl"]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/smm-h/wakethemup"
Repository = "https://github.com/smm-h/wakethemup"

[tool.setuptools]
packages = ["wakethemup"]

[project.scripts]
wake = "wakethemup:main"
